fix undesirable wiki overflow

--- a/content/public/style/layout-wikipage.css
+++ b/content/public/style/layout-wikipage.css
@@ -76,6 +76,7 @@ main article {
     border-top-left-radius: 24px;
     border-top-right-radius: 24px;
     padding: 0 32px 32px 32px;
+    overflow: auto;
 }
 
 main article hgroup {
